crates/reckon-cli/src/snapshots/reckon__render__tests__snapshot_json_with_balance.snap
---
source: crates/reckon-cli/src/render.rs
expression: out
---
[
  {
    "cache_read": 200000,
    "cache_write": 15000,
    "cost_usd": 0.92625,
    "input": 120000,
    "model": "anthropic/claude-sonnet-4.6",
    "month": "2026-05",
    "output": 30000,
    "reasoning": 0,
    "source": "claude"
  },
  {
    "cache_read": 0,
    "cache_write": 0,
    "cost_usd": 0.6937500000000001,
    "input": 75000,
    "model": "google/gemini-2.5-pro",
    "month": "2026-05",
    "output": 20000,
    "reasoning": 40000,
    "source": "gemini"
  },
  {
    "cache_read": 60000,
    "cache_write": 4000,
    "cost_usd": 0.333,
    "input": 45000,
    "model": "anthropic/claude-sonnet-4.6",
    "month": "2026-05",
    "output": 11000,
    "reasoning": 0,
    "source": "opencode"
  },
  {
    "cache_read": 0,
    "cache_write": 0,
    "cost_usd": 0.975,
    "input": 25000,
    "known_cost_usd": 1.65,
    "model": "anthropic/claude-opus-4.7",
    "month": "2026-05",
    "output": 8000,
    "reasoning": 0,
    "source": "openrouter"
  },
  {
    "cache_read": 260000,
    "cache_write": 19000,
    "cost_usd": 2.928,
    "input": 265000,
    "month": "2026-05",
    "output": 69000,
    "reasoning": 40000,
    "source": "TOTAL"
  },
  {
    "cache_read": 80000,
    "cache_write": 5000,
    "cost_usd": 1.86375,
    "input": 50000,
    "model": "anthropic/claude-opus-4.7",
    "month": "2026-04",
    "output": 12000,
    "reasoning": 0,
    "source": "claude"
  },
  {
    "cache_read": 0,
    "cache_write": 0,
    "cost_usd": 0.0,
    "input": 10000,
    "model": "openai/codex-mini",
    "month": "2026-04",
    "output": 3000,
    "reasoning": 5000,
    "source": "codex"
  },
  {
    "cache_read": 15000,
    "cache_write": 1000,
    "cost_usd": 0.06975,
    "input": 8000,
    "model": "anthropic/claude-sonnet-4.6",
    "month": "2026-04",
    "output": 2500,
    "reasoning": 0,
    "source": "pi"
  },
  {
    "cache_read": 95000,
    "cache_write": 6000,
    "cost_usd": 1.9335,
    "input": 68000,
    "month": "2026-04",
    "output": 17500,
    "reasoning": 5000,
    "source": "TOTAL"
  },
  {
    "openrouter_balance": {
      "fetched_at": "2026-05-11T12:00:00Z",
      "total_credits": 100.0,
      "total_usage": 25.5
    }
  }
]
