crates/reckon-cli/src/snapshots/reckon__render__tests__snapshot_table_all_columns.snap
---
source: crates/reckon-cli/src/render.rs
expression: out
---
┌─────────┬────────────┬─────────────────────────────┬─────────┬────────┬──────────┬──────────┬───────────┬─────────┬───────┐
│ Month   │ Source     │ Model                       │      In │    Out │ Cache Wr │ Cache Rd │ Reasoning │   Total │  Cost │
├─────────┼────────────┼─────────────────────────────┼─────────┼────────┼──────────┼──────────┼───────────┼─────────┼───────┤
│ 2026-05 │ claude     │ anthropic/claude-sonnet-4.6 │ 120,000 │ 30,000 │   15,000 │  200,000 │         0 │ 365,000 │ $0.93 │
├─────────┼────────────┼─────────────────────────────┼─────────┼────────┼──────────┼──────────┼───────────┼─────────┼───────┤
│ 2026-05 │ gemini     │ google/gemini-2.5-pro       │  75,000 │ 20,000 │        0 │        0 │    40,000 │ 135,000 │ $0.69 │
├─────────┼────────────┼─────────────────────────────┼─────────┼────────┼──────────┼──────────┼───────────┼─────────┼───────┤
│ 2026-05 │ opencode   │ anthropic/claude-sonnet-4.6 │  45,000 │ 11,000 │    4,000 │   60,000 │         0 │ 120,000 │ $0.33 │
├─────────┼────────────┼─────────────────────────────┼─────────┼────────┼──────────┼──────────┼───────────┼─────────┼───────┤
│ 2026-05 │ openrouter │ anthropic/claude-opus-4.7   │  25,000 │  8,000 │        0 │        0 │         0 │  33,000 │ $0.97 │
├─────────┼────────────┼─────────────────────────────┼─────────┼────────┼──────────┼──────────┼───────────┼─────────┼───────┤
│ 2026-05 │ TOTAL      │                             │ 265,000 │ 69,000 │   19,000 │  260,000 │    40,000 │ 653,000 │ $2.93 │
├─────────┼────────────┼─────────────────────────────┼─────────┼────────┼──────────┼──────────┼───────────┼─────────┼───────┤
│ 2026-04 │ claude     │ anthropic/claude-opus-4.7   │  50,000 │ 12,000 │    5,000 │   80,000 │         0 │ 147,000 │ $1.86 │
├─────────┼────────────┼─────────────────────────────┼─────────┼────────┼──────────┼──────────┼───────────┼─────────┼───────┤
│ 2026-04 │ codex      │ openai/codex-mini           │  10,000 │  3,000 │        0 │        0 │     5,000 │  18,000 │ $0.00 │
├─────────┼────────────┼─────────────────────────────┼─────────┼────────┼──────────┼──────────┼───────────┼─────────┼───────┤
│ 2026-04 │ pi         │ anthropic/claude-sonnet-4.6 │   8,000 │  2,500 │    1,000 │   15,000 │         0 │  26,500 │ $0.07 │
├─────────┼────────────┼─────────────────────────────┼─────────┼────────┼──────────┼──────────┼───────────┼─────────┼───────┤
│ 2026-04 │ TOTAL      │                             │  68,000 │ 17,500 │    6,000 │   95,000 │     5,000 │ 191,500 │ $1.93 │
└─────────┴────────────┴─────────────────────────────┴─────────┴────────┴──────────┴──────────┴───────────┴─────────┴───────┘
