crates/reckon-cli/src/snapshots/reckon__render__tests__snapshot_table_by_source.snap
---
source: crates/reckon-cli/src/render.rs
expression: out
---
┌─────────┬────────────┬─────────┬───────┐
│ Month   │ Source     │   Total │  Cost │
├─────────┼────────────┼─────────┼───────┤
│ 2026-05 │ claude     │ 365,000 │ $0.00 │
├─────────┼────────────┼─────────┼───────┤
│ 2026-05 │ gemini     │ 135,000 │ $0.00 │
├─────────┼────────────┼─────────┼───────┤
│ 2026-05 │ opencode   │ 120,000 │ $0.00 │
├─────────┼────────────┼─────────┼───────┤
│ 2026-05 │ openrouter │  33,000 │ $0.00 │
├─────────┼────────────┼─────────┼───────┤
│ 2026-05 │ TOTAL      │ 653,000 │ $0.00 │
├─────────┼────────────┼─────────┼───────┤
│ 2026-04 │ claude     │ 147,000 │ $0.00 │
├─────────┼────────────┼─────────┼───────┤
│ 2026-04 │ codex      │  18,000 │ $0.00 │
├─────────┼────────────┼─────────┼───────┤
│ 2026-04 │ pi         │  26,500 │ $0.00 │
├─────────┼────────────┼─────────┼───────┤
│ 2026-04 │ TOTAL      │ 191,500 │ $0.00 │
└─────────┴────────────┴─────────┴───────┘
