crates/reckon-cli/src/snapshots/reckon__render__tests__snapshot_table_default.snap
---
source: crates/reckon-cli/src/render.rs
expression: out
---
┌─────────┬────────────┬─────────────────────────────┬─────────┬───────┐
│ Month   │ Source     │ Model                       │   Total │  Cost │
├─────────┼────────────┼─────────────────────────────┼─────────┼───────┤
│ 2026-05 │ claude     │ anthropic/claude-sonnet-4.6 │ 365,000 │ $0.93 │
├─────────┼────────────┼─────────────────────────────┼─────────┼───────┤
│ 2026-05 │ gemini     │ google/gemini-2.5-pro       │ 135,000 │ $0.69 │
├─────────┼────────────┼─────────────────────────────┼─────────┼───────┤
│ 2026-05 │ opencode   │ anthropic/claude-sonnet-4.6 │ 120,000 │ $0.33 │
├─────────┼────────────┼─────────────────────────────┼─────────┼───────┤
│ 2026-05 │ openrouter │ anthropic/claude-opus-4.7   │  33,000 │ $0.97 │
├─────────┼────────────┼─────────────────────────────┼─────────┼───────┤
│ 2026-05 │ TOTAL      │                             │ 653,000 │ $2.93 │
├─────────┼────────────┼─────────────────────────────┼─────────┼───────┤
│ 2026-04 │ claude     │ anthropic/claude-opus-4.7   │ 147,000 │ $1.86 │
├─────────┼────────────┼─────────────────────────────┼─────────┼───────┤
│ 2026-04 │ codex      │ openai/codex-mini           │  18,000 │ $0.00 │
├─────────┼────────────┼─────────────────────────────┼─────────┼───────┤
│ 2026-04 │ pi         │ anthropic/claude-sonnet-4.6 │  26,500 │ $0.07 │
├─────────┼────────────┼─────────────────────────────┼─────────┼───────┤
│ 2026-04 │ TOTAL      │                             │ 191,500 │ $1.93 │
└─────────┴────────────┴─────────────────────────────┴─────────┴───────┘
