crates/reckon-cli/src/snapshots/reckon__render__tests__snapshot_table_no_breakdown.snap
---
source: crates/reckon-cli/src/render.rs
expression: out
---
┌─────────┬─────────┬───────┐
│ Month   │   Total │  Cost │
├─────────┼─────────┼───────┤
│ 2026-05 │ 653,000 │ $2.93 │
├─────────┼─────────┼───────┤
│ 2026-04 │ 191,500 │ $1.93 │
└─────────┴─────────┴───────┘
